@@ -3,6 +3,7 @@
     * Update GFPastel 2010
     * Fix last post and pagination links
     * Fix tagging and tracking features
+    * Fix post and topic deletion
 
 2010-05-05:
     * version 0.7.5
